--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="w-full h-full">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Cezeta's pocket</title>
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
-  <body class="w-full h-full">
+
+  <body>
     <app-root></app-root>
   </body>
 </html>
