--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link href="https://fonts.cdnfonts.com/css/digital-7-mono" rel="stylesheet">
   </head>
   
   <script type="module" defer>
